--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "foundry": "~3.0.0",
     "foundry-release-git": "~1.1.0",
     "foundry-release-git-semver-branches": "~1.1.0",
-    "foundry-release-npm": "~1.1.0"
+    "foundry-release-npm": "~1.1.0",
+    "underscore": "~1.8.3"
   },
   "keywords": [],
   "private": true
